[package]
name = "irs"
version = "0.1.0"
authors = ["Hirochika Matsumoto <git@hkmatsumoto.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
crossterm = "0.24.0"
reedline = "0.11.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-tree = "0.2.1"
rustjitc = { git = "https://github.com/hkmatsumoto/rustjitc" }

[package.metadata.rust-analyzer]
rustc_private = true
